--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,13 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
-.Python
+# Heroku
 env/
 venv/
+.env
+
+# Distribution / packaging
+.Python
 bin/
 build/
 develop-eggs/
