--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 PyYAML==3.11
 Werkzeug==0.9.6
-gunicorn==19.1.0
+gunicorn==19.1.1
+isoweek==1.3.0
 itsdangerous==0.24
-redis==2.10.2
+redis==2.10.3
 requests==2.3.0
 ua-parser==0.3.5
 user-agents==0.2.0
